# ai-playground

./: README.md  pyproject.toml  settings.ini
ai_playground/: _modidx.py
nbs/: index.ipynb  nbdev.yml
